; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_release_tree_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_release_tree_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_entry = type { i64 }

@avail_tree_entry = common dso_local global %struct.tree_entry* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tree_entry*)* @release_tree_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_tree_entry(%struct.tree_entry* %0) #0 {
  %2 = alloca %struct.tree_entry*, align 8
  store %struct.tree_entry* %0, %struct.tree_entry** %2, align 8
  %3 = load %struct.tree_entry*, %struct.tree_entry** %2, align 8
  %4 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.tree_entry*, %struct.tree_entry** %2, align 8
  %9 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @release_tree_content_recursive(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.tree_entry*, %struct.tree_entry** @avail_tree_entry, align 8
  %14 = bitcast %struct.tree_entry* %13 to i8*
  %15 = load %struct.tree_entry*, %struct.tree_entry** %2, align 8
  %16 = bitcast %struct.tree_entry* %15 to i8**
  store i8* %14, i8** %16, align 8
  %17 = load %struct.tree_entry*, %struct.tree_entry** %2, align 8
  store %struct.tree_entry* %17, %struct.tree_entry** @avail_tree_entry, align 8
  ret void
}

declare dso_local i32 @release_tree_content_recursive(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
